fix(): add gap between tabs

--- a/bricks/containers/src/tab/tab-group/tab.shadow.css
+++ b/bricks/containers/src/tab/tab-group/tab.shadow.css
@@ -51,6 +51,10 @@
   margin-right: 12px;
 }
 
+.tab-nav:not(.panel) .tab-item-wrapper {
+  gap: 20px;
+}
+
 .content {
   padding: var(--local-tabs-content-padding);
 }
